# scpp

./: .clang-format  .gitexternals  .gitexternals.bbp  .gitignore  .travis.yml  CMakeLists.txt  GNUmakefile  LICENSE.txt  README  README.md
CMake/: BBPPackageUpload.cmake  BBPPackages.cmake  BBPPackagesGit.cmake  CPackConfig.cmake  CommonCPack.cmake  FindPackages.cmake  FindRTNeuron.cmake  FindReportingLib.cmake  FindRequired.cmake  Hello.cmake  Template.cmake  depends.txt
apps/: CMakeLists.txt
apps/hellorunner/: CMakeLists.txt  main.cpp
apps/rule/: CMakeLists.txt  main.cpp
doc/: Documentation.md  Doxyfile  RelNotes.md
hello/: CMakeLists.txt  configure.cmake  files.cmake  version.cpp  version.in.h  world.cpp  world.h
test/: CMakeLists.txt  world.cpp
tests/: CMakeLists.txt  world.cpp
